[package]
name = "kernel-rust"
version = "0.6.0"
authors = ["Antonino Natale <antonio.natale97@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
bindgen = "0.65.1"
walkdir = "2.5.0"
regex = "1.10.5"